3-traefik/traefik-external.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: traefik-ingress-controller-external
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb-external
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb-external
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb-external
        name: traefik-ingress-lb-external
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik
        name: traefik-ingress-lb
        imagePullPolicy: IfNotPresent
        ports:
         - name: http
           containerPort: 80
         - name: https
           containerPort: 443
         - name: admin
           containerPort: 8080
        args:
        - --configfile=/config/traefik.toml
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 3
          timeoutSeconds: 1
#        resources:
#          requests:
#            cpu: 100m
#            memory: 64Mi
#          limits:
#            cpu: 200m
#            memory: 256Mi
        volumeMounts:
        - name: config
          mountPath: /etc/traefik/traefik.toml
        - name: certs
          mountPath: /certs
      volumes:
      - name: config
        hostPath:
          path: /nas/home-stack/3-traefik/traefik-external.toml
          type: File
      - name: certs
        hostPath:
          path: /nas/home-stack/3-traefik/certs
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role
                  operator: In
                  values:
                  - boss
              topologyKey: kubernetes.io/hostname
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service-external
  namespace: kube-system
  labels:
    k8s-app: traefik-ingress-lb
spec:
  selector:
    k8s-app: traefik-ingress-lb-external
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
  type: LoadBalancer
  loadBalancerIP: 192.168.1.231
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-lb-external
  namespace: kube-system
  labels:
    traffic-type: external
spec:
  rules:
  - host: traefik.external.allandequeiroz.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-service-external
          servicePort: admin
